EmbeddedSystem/quem.txt
down vote
You can build qemu with beagleboard support yourself with these steps, which I have tried with Ubuntu 14.04.

First remove the qemu package that you have installed with

$ sudo apt-get remove qemu-system-arm

Then download the source code for qemu to a suitable folder

$ git clone git://git.linaro.org/qemu/qemu-linaro.git
$ cd qemu-linaro


You need these two packages to build qemu

sudo apt-get install linaro-image-tools
sudo apt-get install libglib2.0-dev zlib1g-dev
sudo apt-get install glib2.0-dev libsdl1.2-dev libpixman-1-dev git
sudo apt-get install libfdt-dev


You will also need the pixman and dtc git submodules

$ git submodule update --init pixman
 $ git submodule update --init dtc

Now you can continue and configure and build it!

$ mkdir build
 $ cd build
 $ ../configure --prefix=/opt
 $ make -j8
 $ sudo make install

还有一个找了很久解决方案的错误:
vl.c: In function ‘main’:
vl.c:2778:5: error: ‘g_mem_set_vtable’ is deprecated [-Werror=deprecated-declarations]
     g_mem_set_vtable(&mem_trace);
     ^
In file included from /usr/include/glib-2.0/glib/glist.h:32:0,
                 from /usr/include/glib-2.0/glib/ghash.h:33,
                 from /usr/include/glib-2.0/glib.h:50,
                 from vl.c:59:
/usr/include/glib-2.0/glib/gmem.h:357:7: note: declared here
 void  g_mem_set_vtable (GMemVTable *vtable);
       ^
cc1: all warnings being treated as errors
rules.mak:57: recipe for target 'vl.o' failed
make: *** [vl.o] Error 1
其实解决起来很简单，在Makefile文件最后加上一行 QEMU_CFLAGS+=-w 就可以了。

https://eewiki.net/display/linuxonarm/BeagleBone+Black
http://beagleboard.org/project/U-Boot+(V1)/
